# pytoy

./: CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  release.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: modules.rst  pytoy.rst
pytoy/: __init__.py  pytoy.py
tests/: test_pytoy.py
