[tool.poetry]
name = "pytoy"
version = "0.1.0"
description = "pytoy is a simple toy Python package created purely in educational purposes."
authors = ["Serg Pokrovskyy <serg@pokrovskyy.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
sphinx = "^2.4.3"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
