[tool.poetry]
name = "pytoy"
version = "0.1.0"
description = "pytoy is a simple toy Python package created purely in educational purposes."
authors = ["Serg Pokrovskyy <serg@pokrovskyy.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
flake8 = "^3.7.9"
pytest-cov

[tool.poetry.dev-dependencies]
sphinx = "^2.4.3"
sphinxcontrib-napoleon = "^0.7"
flake8 = "^3.7.9"
pytest = "^5.3.5"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12", "flake8>=3.7.9", "pytest-cov>=2.8.1"]
build-backend = "poetry.masonry.api"
